add refund function
