# swagger/foo.swagger.json
@@ -1,10 +1,13 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "toolrpc/proto.proto",
+    "title": "toolrpc/luckPk.proto",
     "version": "version not set"
   },
   "tags": [
+    {
+      "name": "luckPkApi"
+    },
     {
       "name": "tools"
     }
@@ -29,7 +32,7 @@
           "default": {
             "description": "An unexpected error response.",
             "schema": {
-              "$ref": "#/definitions/rpcStatus"
+              "$ref": "#/definitions/googlerpcStatus"
             }
           }
         },
@@ -73,7 +76,7 @@
           "default": {
             "description": "An unexpected error response.",
             "schema": {
-              "$ref": "#/definitions/rpcStatus"
+              "$ref": "#/definitions/googlerpcStatus"
             }
           }
         },
@@ -96,7 +99,7 @@
           "default": {
             "description": "An unexpected error response.",
             "schema": {
-              "$ref": "#/definitions/rpcStatus"
+              "$ref": "#/definitions/googlerpcStatus"
             }
           }
         },
@@ -121,7 +124,7 @@
           "default": {
             "description": "An unexpected error response.",
             "schema": {
-              "$ref": "#/definitions/rpcStatus"
+              "$ref": "#/definitions/googlerpcStatus"
             }
           }
         },
@@ -158,7 +161,7 @@
           "default": {
             "description": "An unexpected error response.",
             "schema": {
-              "$ref": "#/definitions/rpcStatus"
+              "$ref": "#/definitions/googlerpcStatus"
             }
           }
         },
@@ -195,7 +198,7 @@
           "default": {
             "description": "An unexpected error response.",
             "schema": {
-              "$ref": "#/definitions/rpcStatus"
+              "$ref": "#/definitions/googlerpcStatus"
             }
           }
         },
@@ -222,16 +225,7 @@
     }
   },
   "definitions": {
-    "protobufAny": {
-      "type": "object",
-      "properties": {
-        "@type": {
-          "type": "string"
-        }
-      },
-      "additionalProperties": {}
-    },
-    "rpcStatus": {
+    "googlerpcStatus": {
       "type": "object",
       "properties": {
         "code": {
@@ -248,6 +242,15 @@
           }
         }
       }
+    },
+    "protobufAny": {
+      "type": "object",
+      "properties": {
+        "@type": {
+          "type": "string"
+        }
+      },
+      "additionalProperties": {}
     },
     "toolrpcCreatePropertyReq": {
       "type": "object",
@@ -277,6 +280,36 @@
         }
       }
     },
+    "toolrpcListLuckItemRes": {
+      "type": "object",
+      "properties": {
+        "count": {
+          "type": "string",
+          "format": "int64"
+        },
+        "Items": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/toolrpcLuckItem"
+          }
+        }
+      }
+    },
+    "toolrpcListLuckPkRes": {
+      "type": "object",
+      "properties": {
+        "count": {
+          "type": "string",
+          "format": "int64"
+        },
+        "Items": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/toolrpcLuckPk"
+          }
+        }
+      }
+    },
     "toolrpcListPropertiesRes": {
       "type": "object",
       "properties": {
@@ -287,6 +320,128 @@
           }
         }
       }
+    },
+    "toolrpcLuckItem": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "format": "int64"
+        },
+        "luckpkId": {
+          "type": "string",
+          "format": "int64"
+        },
+        "userId": {
+          "type": "string",
+          "format": "int64"
+        },
+        "userAlias": {
+          "type": "string"
+        },
+        "amt": {
+          "type": "string",
+          "format": "int64"
+        },
+        "createdAt": {
+          "type": "string",
+          "format": "int64"
+        },
+        "status": {
+          "$ref": "#/definitions/toolrpcLuckItemStatus"
+        },
+        "ErrMsg": {
+          "type": "string"
+        }
+      },
+      "title": "luckPackage will split to many LuckItem,one user one record"
+    },
+    "toolrpcLuckItemStatus": {
+      "type": "integer",
+      "format": "int32",
+      "enum": [
+        "0",
+        "1",
+        "2",
+        "3"
+      ],
+      "default": "0",
+      "title": "- 1: server is paying user invoice\n - 2: server have paying user invoice"
+    },
+    "toolrpcLuckPKStatus": {
+      "type": "integer",
+      "format": "int32",
+      "enum": [
+        "0",
+        "1",
+        "2",
+        "3",
+        "4"
+      ],
+      "default": "0",
+      "title": "- 1: use have pay the LuckPk\n - 2: all balance was consumered"
+    },
+    "toolrpcLuckPk": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "format": "int64"
+        },
+        "userId": {
+          "type": "string",
+          "format": "int64"
+        },
+        "userAlias": {
+          "type": "string"
+        },
+        "assetId": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "amt": {
+          "type": "string",
+          "format": "uint64",
+          "title": "precision　is 100000000"
+        },
+        "balance": {
+          "type": "string",
+          "format": "uint64",
+          "title": "precision　is 100000000"
+        },
+        "PaymentHash": {
+          "type": "string",
+          "title": "fill on server side"
+        },
+        "parts": {
+          "type": "string",
+          "format": "uint64",
+          "description": "how many times the luckPk can be received. every receive-item save as LuckItem."
+        },
+        "gives": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "status": {
+          "$ref": "#/definitions/toolrpcLuckPKStatus"
+        },
+        "expiredTimeSec": {
+          "type": "string",
+          "format": "int64"
+        },
+        "invoice": {
+          "type": "string",
+          "title": "gen by server"
+        },
+        "createdAt": {
+          "type": "string",
+          "format": "int64"
+        },
+        "ErrorCreateMsg": {
+          "type": "string"
+        }
+      },
+      "title": "luckPackage"
     },
     "toolrpcOmniGetPropertyRes": {
       "type": "object",
@@ -420,6 +575,67 @@
           "example": "baidu.com"
         }
       }
+    },
+    "toolrpcSpayStatus": {
+      "type": "integer",
+      "format": "int32",
+      "enum": [
+        "0",
+        "1",
+        "2",
+        "3",
+        "4"
+      ],
+      "default": "0",
+      "title": "- 1: user have payed service Invoice\n - 2: server have payed to user c"
+    },
+    "toolrpcspay": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "format": "int64"
+        },
+        "userInvoice": {
+          "type": "string",
+          "title": "user a create invoice,give to b,"
+        },
+        "servInvoice": {
+          "type": "string",
+          "title": "server b gen invoice, user a rcv it and give to c, user c will pay it"
+        },
+        "siPayHash": {
+          "type": "string",
+          "title": "server invoice hash"
+        },
+        "payerAddr": {
+          "type": "string"
+        },
+        "expire": {
+          "type": "string",
+          "format": "int64"
+        },
+        "userId": {
+          "type": "string",
+          "format": "int64",
+          "title": "user a id , fill in server side;"
+        },
+        "createdAt": {
+          "type": "string",
+          "format": "int64"
+        },
+        "status": {
+          "$ref": "#/definitions/toolrpcSpayStatus"
+        },
+        "errMsg": {
+          "type": "string"
+        },
+        "errTimes": {
+          "type": "string",
+          "format": "int64"
+        }
+      },
+      "title": "spay:  substitution　pay"
     }
   }
 }
